--- a/imagem visual/css/style.css
+++ b/imagem visual/css/style.css
@@ -228,7 +228,6 @@ ul {
 }
 
 .divider {
-  background-color: ;
   font-size: 1.5em;
   padding: 20px;
   text-align: center;
@@ -346,4 +345,89 @@ td {
   position: relative;
   text-align: center;
   top: 70%;
+}
+
+.cadastro-tittle {
+  font-size: 1.5rem;
+  padding: .5rem 0 1.5rem 0;
+  margin-bottom: .5rem;
+}
+
+.input {
+  padding: 10px;
+  font-size: 1.1rem;
+  border: 1px solid #6a7c8e;
+  border-radius: 2px;
+  width: 350px;
+}
+
+.input:focus {
+  outline: none;
+  border: 1px solid #3e7abe;
+  box-shadow: 0px 0px 10px rgba(62, 122, 190, 0.3);
+}
+
+input[type=submit] {
+  padding: 10px;
+  width: 100px;
+  border: 1px solid #2660A4;
+  background-color: var(--azul-dois);
+  color: white;
+  cursor: pointer;
+  border-radius: 2px;
+  margin-top: 1rem;
+  transition: .2s ease-out;
+}
+
+input[type=submit]:hover {
+  background-color: var(--padrao);
+}
+
+.form-cadastro {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(106, 124, 142, 0.3);
+  padding: 3rem;
+}
+
+.form-adicionar {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+
+.inputs-infos {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.box-imgs {
+  margin-left: 1.5rem;
+}
+
+#input-area {
+  height: 150px;
+  font-size: .9rem;
+  font-family: 'Roboto', sans-serif;
+  color: #6a7c8e;
+  resize: none;
+}
+
+.choose-file {
+  width: 300px;
+  height: 200px;
+  background-color: #ededed;
+  margin: auto;
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 2px #6a7c8e dashed;
+  transition: .3s ease-out;
+}
+
+.choose-file:active {
+  background-color: #dfdfdf;
 }
