--- a/imagem visual/css/form.css
+++ b/imagem visual/css/form.css
@@ -46,6 +46,8 @@ body {
 
 .second-tittle {
   font-size: 1.2rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
   font-weight: 300;
   text-align: center;
   border-bottom: 1px solid rgba(106, 124, 142, 0.3);
@@ -112,4 +114,23 @@ input:focus {
 
 .link-help:hover {
   color: var(--azul-dois);
+}
+
+.email-esqueci {
+  margin-top: 1.5rem;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.link-senha {
+  text-decoration: none;
+  color: white;
+  width: 100px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3e7abe;
+  border-radius: 5px;
+  margin-top: 1.5rem;
 }
