--- a/imagem visual/css/style.css
+++ b/imagem visual/css/style.css
@@ -66,14 +66,6 @@ header {
   width: 40px;
 }
 
-h3 {
-  text-align: center;
-  padding: 10px 0;
-  font-size: 1.5em;
-  color: rgba(255, 255, 255, 0.9);
-  font-weight: lighter;
-}
-
 img {
   width: 100px;
 }
@@ -185,7 +177,7 @@ ul {
   position: sticky;
   background-color: #ffffff;
   width: 230px;
-  height: 85vh;
+  height: 84vh;
   padding: 20px;
   margin-right: 20px;
   box-shadow: 0px 0px 10px rgba(106, 124, 142, 0.3);
@@ -344,7 +336,7 @@ td {
 .copyright {
   position: relative;
   text-align: center;
-  top: 70%;
+  top: 76%;
 }
 
 .cadastro-tittle {
@@ -435,4 +427,108 @@ input[type=submit]:hover {
 .home-info {
   background-color: white;
   border-radius: 5px;
+}
+
+.detail-link {
+  color: #a0abb5;
+}
+
+.detail-link:hover {
+  color: var(--azul-branco);
+}
+
+.detail-box {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(106, 124, 142, 0.3);
+}
+
+.detail-tittle {
+  font-size: 2rem;
+  color: #6a7c8e;
+  margin-bottom: 1rem;
+}
+
+.detail-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.detail-img-center {
+  width: 250px;
+  height: 200px;
+  border-radius: 5px;
+  background-color: #e4e4e4;
+}
+
+.seta {
+  font-size: 2rem;
+  margin: 0 10px;
+  cursor: pointer;
+  background-color: #6a7c8e;
+  padding: 5px;
+  color: white;
+  border-radius: 50%;
+  transition: .2s;
+}
+
+.seta:active {
+  background-color: #4a5b6b;
+}
+
+.detail-text-box {
+  padding: 10px;
+  background-color: rgb(242, 242, 242);
+  border-radius: 5px;
+  font-size: 1.1rem;
+  border: 1px solid #6a7c8e;
+}
+
+.detail-infos {
+  margin-top: 1.5rem;
+}
+
+.label-detail {
+  margin-top: 1.2rem;
+}
+
+.label-text-detail {
+  display: block;
+  margin-bottom: .3rem;
+}
+
+.map {
+  border-radius: 5px;
+}
+
+.side-side {
+  display: flex;
+  gap: 2.5rem;
+}
+
+.part-one {
+  border-right: 1px solid rgba(106, 124, 142, 0.3);
+  padding-right: 30px;
+}
+
+.part-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.local-infos {
+  width: 300px;
+  height: 150px;
+  background-color: rgb(242, 242, 242);
+  border: 1px solid #6a7c8e;
+  border-radius: 5px;
+  padding: 15px;
+  text-align: justify;
 }
